# ai-commit-summarizer

./: .env.example  .gitignore  Cargo.toml  README.md  asum.toml.example  coverage.sh  format.sh  install.sh  uninstall.sh
src/: config.rs  db.rs  git.rs  main.rs  test_utils.rs
src/summarizer/: gemini.rs  mod.rs  ollama.rs
