[package]
name = "asum"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.2"
toml = "0.8"
async-trait = "0.1"
anyhow = "1.0"
home = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3"
mockall = "0.11"

[package.metadata.tarpaulin]
fail-under = 90.0
out = ["Html", "Text"]
all-features = true

